# Texor

./: .gitignore  CMakeLists.txt  main.cpp  vcpkg.json
src/: main.cpp
src/core/: File.cpp  File.h  Logging.h
src/ui/: Editor.cpp  Editor.h  MenuBar.cpp  MenuBar.h  StatusBar.cpp  StatusBar.h  TopBar.cpp  TopBar.h
